Updated slides behaviour (carousel, hiding slides)

--- a/src/app/(slider)/page.module.css
+++ b/src/app/(slider)/page.module.css
@@ -4,7 +4,8 @@
   align-items: center;
   justify-content: center;
   padding: 2rem;
-  min-height: 91vh;
+  /* min-height: 91vh; */
+  height: 100vh;
 }
 
 .slider-buttons {
