--- a/src/app/(slider)/singleSlide.module.css
+++ b/src/app/(slider)/singleSlide.module.css
@@ -1,3 +1,13 @@
+/* SLIDES SHOULD OVERLAP WHEN TRANSITIONING */
+
+.hidden {
+  /* animation: fadeout 1s ease-in-out; */
+  display: none !important;
+}
+.active {
+  animation: fadein 1s ease-in-out;
+}
+
 .slide {
   position: relative;
   display: flex;
@@ -11,6 +21,7 @@
   aspect-ratio: 16/9;
   object-fit: cover;
   border-radius: 20px;
+  max-height: 90vh;
 }
 
 .shadow {
@@ -35,4 +46,22 @@
 }
 .text p {
   font-size: 1.4rem;
+}
+
+/* keyframes */
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fadeout {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
