--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,16 @@
 :root {
 }
+
 body {
   background: rgb(7, 5, 5);
-
   background: linear-gradient(90deg, rgb(7, 5, 5) 0%, rgb(4, 24, 42) 100%);
+}
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+}
+* {
+  box-sizing: border-box;
 }
