--- a/src/app/(slider)/singleSlide.module.css
+++ b/src/app/(slider)/singleSlide.module.css
@@ -1,10 +1,8 @@
-/* SLIDES SHOULD OVERLAP WHEN TRANSITIONING */
-
 .hidden {
   display: none !important;
 }
 .active {
-  animation: fadein 1s ease-in-out;
+  animation: fade-in 1s ease-in-out;
 }
 
 .slide {
@@ -19,6 +17,7 @@
   height: auto;
   aspect-ratio: 16/9;
   object-fit: cover;
+  object-position: center;
   border-radius: 20px;
   max-height: 90vh;
 }
@@ -47,12 +46,28 @@
   font-size: 1.4rem;
 }
 
-/* keyframes */
-@keyframes fadein {
+/* Animations */
+@keyframes fade-in {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  .slide img {
+    aspect-ratio: 1;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .slide img {
+    aspect-ratio: 5/6;
+  }
+}
+@media screen and (max-width: 720px) {
+  .slide img {
+    aspect-ratio: 5/14;
   }
 }
