--- a/src/app/(slider)/page.module.css
+++ b/src/app/(slider)/page.module.css
@@ -7,6 +7,24 @@
   height: 100vh;
 }
 
+.main button {
+  border-radius: 50%;
+  background-color: #ccc;
+  border: none;
+  width: 56px;
+  height: 56px;
+  font-size: 22px;
+  cursor: pointer;
+  transition: background-color 0.4s;
+  box-shadow: 2px 2px rgba(0, 0, 0, 0.2);
+}
+.main button:hover {
+  background-color: #b5e4ea;
+}
+.main button:active {
+  background-color: #8eb1b6;
+}
+
 .slider-buttons {
   margin: 12px;
   display: flex;
@@ -15,20 +33,14 @@
   gap: 12px;
 }
 
-.slider-buttons button {
-  border-radius: 50%;
-  background-color: #ddd;
-  border: none;
-  width: 56px;
-  height: 56px;
-  font-size: 26px;
-  cursor: pointer;
-  transition: background-color 0.4s;
-  box-shadow: 2px 2px rgba(0, 0, 0, 0.2);
+.audio-button {
+  margin: 12px;
 }
-.slider-buttons button:hover {
-  background-color: #b5e4ea;
-}
-.slider-buttons button:active {
-  background-color: #8eb1b6;
+
+@media screen and (max-width: 720px) {
+  .main button {
+    width: 42px;
+    height: 42px;
+    font-size: 16px;
+  }
 }
