--- a/src/app/(slider)/page.module.css
+++ b/src/app/(slider)/page.module.css
@@ -6,14 +6,20 @@
   padding: 2rem;
   height: 100vh;
 }
+.slider {
+  display: flex;
+  justify-content: center;
+  min-height: 80vh;
+  border-radius: 20px;
+}
 
 .main button {
   border-radius: 50%;
   background-color: #ccc;
   border: none;
-  width: 56px;
-  height: 56px;
-  font-size: 22px;
+  width: 52px;
+  height: 52px;
+  font-size: 20px;
   cursor: pointer;
   transition: background-color 0.4s;
   box-shadow: 2px 2px rgba(0, 0, 0, 0.2);
@@ -28,19 +34,37 @@
 .slider-buttons {
   margin: 12px;
   display: flex;
-  justify-content: center;
-  align-items: center;
   gap: 12px;
 }
 
 .audio-button {
-  margin: 12px;
+  margin: 6px 12px 16px;
 }
 
 @media screen and (max-width: 720px) {
+  .main {
+    padding: 0.4rem 0.8rem;
+  }
   .main button {
-    width: 42px;
-    height: 42px;
-    font-size: 16px;
+    width: 44px;
+    height: 44px;
+    font-size: 18px;
+  }
+  .slider {
+    min-height: 60vh;
+  }
+}
+@media screen and (max-height: 768px) and (orientation: landscape) {
+  .slider {
+    min-height: 60vh;
+  }
+  .main button {
+    width: 44px;
+    height: 44px;
+    font-size: 18px;
+  }
+  .audio-button,
+  .slider-buttons {
+    margin: 6px;
   }
 }
